# GraficasLab2

./: CMakeLists.txt  Makefile  README.md  WinMain.cpp  main.cpp
